--- a/docs/notebooks/DESC_Fixed_Axis_NAE_Constraint.ipynb
+++ b/docs/notebooks/DESC_Fixed_Axis_NAE_Constraint.ipynb
@@ -234,9 +234,9 @@
     "    labels=[\"DESC-solved equilibrium\", \"NAE surfaces\"],\n",
     "    figsize=(12, 12),\n",
     "    theta=0,\n",
-    "    colors=[\"k\", \"r\"],\n",
-    "    linestyles=[\"-\", \":\"],\n",
-    "    lws=[1, 2],\n",
+    "    color=[\"k\", \"r\"],\n",
+    "    ls=[\"-\", \":\"],\n",
+    "    lw=[1, 2],\n",
     ");"
    ]
   },
@@ -399,20 +399,20 @@
     "fig, ax = plot_comparison(\n",
     "    eqs=[eq_fit, eq_NAE],\n",
     "    labels=[f\"NAE Surfaces r={r}\", f\"DESC NAE constrained\"],\n",
-    "    colors=[\"k\", \"g\"],\n",
-    "    linestyles=[\"-\", \"--\"],\n",
+    "    color=[\"k\", \"g\"],\n",
+    "    ls=[\"-\", \"--\"],\n",
     "    figsize=(12, 12),\n",
     "    theta=0,\n",
-    "    lws=[1, 2],\n",
+    "    lw=[1, 2],\n",
     ")\n",
     "fig, ax = plot_comparison(\n",
     "    eqs=[desc_eq, eq_NAE],\n",
     "    labels=[f\"DESC Fixed Surface\", f\"DESC NAE constrained\"],\n",
-    "    colors=[\"r\", \"g\"],\n",
-    "    linestyles=[\":\", \"--\"],\n",
+    "    color=[\"r\", \"g\"],\n",
+    "    ls=[\":\", \"--\"],\n",
     "    figsize=(12, 12),\n",
     "    theta=0,\n",
-    "    lws=[1, 2],\n",
+    "    lw=[1, 2],\n",
     ");"
    ]
   },
@@ -459,7 +459,7 @@
     "    fT=False,\n",
     "    log=True,\n",
     "    ax=ax,\n",
-    "    colors=[\"r\"],\n",
+    "    color=[\"r\"],\n",
     "    legend=False,\n",
     "    labels=[\"Fixed boundary\"],\n",
     ")\n",
@@ -469,7 +469,7 @@
     "    fT=False,\n",
     "    log=True,\n",
     "    ax=ax,\n",
-    "    colors=[\"g\"],\n",
+    "    color=[\"g\"],\n",
     "    legend=False,\n",
     "    labels=[\"Fixed NAE\"],\n",
     ")\n",
@@ -733,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
