update to dim of compile return

--- a/ParticleTracer.ipynb
+++ b/ParticleTracer.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0+untagged.5523.g890c640.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 2.16 GB available memory\n"
+      "DESC version 0+untagged.5525.g7c6a91a.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 1.73 GB available memory\n"
      ]
     }
    ],
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eq = desc.io.load(\"../equilibria/test_run.h5\")\n",
+    "eq = desc.io.load(\"test_run.h5\")\n",
     "eq._iota = eq.get_profile(\"iota\").to_powerseries(order=eq.L, sym=True)\n",
     "eq._current = None\n",
     "# eq.solve()"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,18 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-07 16:04:30.534917: E external/xla/xla/service/slow_operation_alarm.cc:65] \n",
+      "2023-09-08 21:35:00.082332: E external/xla/xla/service/slow_operation_alarm.cc:65] \n",
       "********************************\n",
       "[Compiling module jit_diffeqsolve] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
       "********************************\n",
-      "2023-09-07 16:05:55.581195: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 3m25.046379907s\n",
+      "2023-09-08 21:37:39.303553: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 4m39.230486666s\n",
       "\n",
       "********************************\n",
       "[Compiling module jit_diffeqsolve] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,31 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compiling objective function and derivatives: ['Particle Tracer']"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Compiling objective function and derivatives: ['Particle Tracer']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-07 16:09:24.376862: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 2m17.670373973s\n",
+      "2023-09-08 21:43:16.517129: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 3m35.260449423s\n",
       "\n",
       "********************************\n",
-      "[Compiling module jit_compute_scalar] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
+      "[Compiling module jit_compute_scaled] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
       "********************************\n"
      ]
     }
