--- a/ParticleTracer.ipynb
+++ b/ParticleTracer.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0+untagged.5525.g7c6a91a.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 1.73 GB available memory\n"
+      "DESC version 0+untagged.5550.g6f6298b,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 1.70 GB available memory\n"
      ]
     }
    ],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,18 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-08 21:35:00.082332: E external/xla/xla/service/slow_operation_alarm.cc:65] \n",
+      "2023-09-11 23:20:47.800770: E external/xla/xla/service/slow_operation_alarm.cc:65] \n",
       "********************************\n",
       "[Compiling module jit_diffeqsolve] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
       "********************************\n",
-      "2023-09-08 21:37:39.303553: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 4m39.230486666s\n",
+      "2023-09-11 23:24:11.562831: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 5m23.760944652s\n",
       "\n",
       "********************************\n",
       "[Compiling module jit_diffeqsolve] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-08 21:43:16.517129: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 3m35.260449423s\n",
+      "2023-09-11 23:30:01.091230: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 3m33.177486084s\n",
       "\n",
       "********************************\n",
       "[Compiling module jit_compute_scaled] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
