--- a/ParticleTracer.ipynb
+++ b/ParticleTracer.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0+untagged.5547.g4df70c2.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 0.65 GB available memory\n"
+      "DESC version 0+untagged.5549.gb032f77.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 2.32 GB available memory\n"
      ]
     }
    ],
@@ -77,11 +77,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-12 01:09:52.295824: E external/xla/xla/service/slow_operation_alarm.cc:65] \n",
+      "2023-09-13 00:20:18.612270: E external/xla/xla/service/slow_operation_alarm.cc:65] \n",
       "********************************\n",
       "[Compiling module jit__odeint_wrapper] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
       "********************************\n",
-      "2023-09-12 01:13:03.562831: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 5m11.286061592s\n",
+      "2023-09-13 00:22:48.430204: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 4m29.821270294s\n",
       "\n",
       "********************************\n",
       "[Compiling module jit__odeint_wrapper] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
@@ -134,6 +134,17 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-13 00:30:24.350217: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 4m31.94021056s\n",
+      "\n",
+      "********************************\n",
+      "[Compiling module jit_compute_scalar] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
+      "********************************\n"
+     ]
+    },
+    {
      "ename": "",
      "evalue": "",
      "output_type": "error",
@@ -143,7 +154,7 @@
     }
    ],
    "source": [
-    "ObjFunction.compile()"
+    "ObjFunction.compile(mode=\"bfgs\")"
    ]
   },
   {
