testscript.py to test on della

--- a/ParticleTracer.ipynb
+++ b/ParticleTracer.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DESC version 0+untagged.5697.g87d61b8.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 1.57 GB available memory\n"
+     ]
+    }
+   ],
    "source": [
     "from desc.objectives import ParticleTracer, ObjectiveFunction\n",
     "from desc.examples import get\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,23 +66,23 @@
     "\n",
     "ini_param = [float(mu), mass_charge]\n",
     "\n",
-    "objective = ParticleTracer(eq=eq, output_time=time, initial_conditions=ini_cond, initial_parameters=ini_param)\n"
+    "objective = ParticleTracer(eq=eq, output_time=time, initial_conditions=ini_cond, initial_parameters=ini_param, compute_option=\"average vpar\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-21 00:44:58.995968: E external/xla/xla/service/slow_operation_alarm.cc:65] \n",
+      "2023-09-21 00:57:28.635091: E external/xla/xla/service/slow_operation_alarm.cc:65] \n",
       "********************************\n",
       "[Compiling module jit__odeint_wrapper] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
       "********************************\n",
-      "2023-09-21 00:47:32.344654: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 4m33.357390913s\n",
+      "2023-09-21 00:59:33.756061: E external/xla/xla/service/slow_operation_alarm.cc:133] The operation took 4m5.12154907s\n",
       "\n",
       "********************************\n",
       "[Compiling module jit__odeint_wrapper] Very slow compile? If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
@@ -85,26 +94,7 @@
      "output_type": "stream",
      "text": [
       "*************** SOLUTION .compute() ***************\n",
-      "[[7.00000000e-01 2.00000000e-01 2.00000000e-01 1.29738345e+07]\n",
-      " [6.24138006e-01 1.25828369e+00 2.92017378e+00 1.21268279e+07]\n",
-      " [5.19032052e-01 2.37462789e+00 5.60196862e+00 1.07267094e+07]\n",
-      " [4.97139260e-01 3.53642771e+00 7.97353540e+00 1.04755540e+07]\n",
-      " [5.82467364e-01 4.66755200e+00 1.03983780e+01 1.16631459e+07]\n",
-      " [6.82495771e-01 5.77031228e+00 1.30999265e+01 1.28384553e+07]\n",
-      " [6.82555490e-01 6.81015022e+00 1.58253491e+01 1.28241246e+07]\n",
-      " [5.83272707e-01 7.89660498e+00 1.85407618e+01 1.16931841e+07]\n",
-      " [5.00201288e-01 9.02222466e+00 2.11735978e+01 1.04446790e+07]\n",
-      " [5.19459950e-01 1.01604040e+01 2.34734990e+01 1.07138840e+07]\n",
-      " [6.21473589e-01 1.13004207e+01 2.60074270e+01 1.21301376e+07]\n",
-      " [6.97009796e-01 1.24010746e+01 2.87259989e+01 1.29710984e+07]\n",
-      " [6.58614050e-01 1.34425409e+01 3.14449184e+01 1.25391566e+07]\n",
-      " [5.46482506e-01 1.45398023e+01 3.41535319e+01 1.12117386e+07]\n",
-      " [4.89855302e-01 1.56997421e+01 3.67090489e+01 1.03749380e+07]\n",
-      " [5.47617462e-01 1.67990781e+01 3.90117870e+01 1.11218496e+07]\n",
-      " [6.57890325e-01 1.79286201e+01 4.16320471e+01 1.25247754e+07]\n",
-      " [7.01137466e-01 1.90124594e+01 4.43545834e+01 1.29779014e+07]\n",
-      " [6.29215295e-01 2.00834666e+01 4.70651816e+01 1.21521329e+07]\n",
-      " [5.20838095e-01 2.11838030e+01 4.97583513e+01 1.07746334e+07]]\n",
+      "11762938.034948044\n",
       "***************************************************\n"
      ]
     }
