fix some typos and try to increase readability of equations

--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "The radial part of the Zernike polynomials is given by\n",
     "\\begin{equation}\n",
-    "Z_{l,m}(\\rho) = \\sum_{s=0}^{(l-|m|)/2} \\frac{(-1)^s (l-s)!}{s![\\frac{1}{2}(l+|m|)-s]![\\frac{1}{2}(l+|m|)-s]!}\\rho^{l-2s}\n",
+    "    \\mathcal{R}_l^{|m|} (\\rho) = \\sum_{s=0}^{(l-|m|)/2} \\frac{(-1)^s(l-s)!}{ s!\\left( \\cfrac{l+|m|}{2} - s\\right)! \\left( \\cfrac{l-|m|}{2} + s\\right)!  }\\hspace{0.1cm} \\rho^{l-2s} \n",
     "\\end{equation}\n",
     "\n",
     "Because the coefficient of rho is made up of entirely integer operations, it can be evaluated quickly and exactly to arbitrary orders (recall that python natively supports arbitrary length integer arithmetic). These coefficients can then be evaluated using Horner's method. This is done in the `zernike_radial_poly` function.\n",
@@ -42,9 +42,9 @@
     "The other approach uses the fact that the above equation can be written as\n",
     "\n",
     "\\begin{equation}\n",
-    "Z_{l,m}(\\rho) = (-1)^{(l-m)/2} \\rho^m  P_{(l-m)/2}^{m, 0} (1 - 2 \\rho^2)\n",
+    "    \\mathcal{R}_l^{m} (\\rho) = (-1)^{(l-m)/2} \\rho^m  P_{(l-m)/2}^{m, 0} (1 - 2 \\rho^2)  \\hspace{1cm} \\text{for } m\\geq0\n",
     "\\end{equation}\n",
-    "Where $P_{n}^{\\alpha, \\beta}$ is a Jacobi polynomial. This allows us to use stable recurrence relations for the Jacobi polynomials, as is done in the `zernike_radial` function."
+    "where $P_{n}^{\\alpha, \\beta}(\\rho)$ is a Jacobi polynomial. This allows us to use stable recurrence relations for the Jacobi polynomials, as is done in the `zernike_radial` function."
    ]
   },
   {
