remove \cfrac{}{}, use \frac

--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -33,17 +33,18 @@
     "The two primary methods we consider are direct polynomial evaluation using Horner's method and an evaluation scheme based on a recurrence relation for Jacobi polynomials.\n",
     "\n",
     "The radial part of the Zernike polynomials is given by\n",
+    "\n",
     "\\begin{equation}\n",
-    "    \\mathcal{R}_l^{|m|} (\\rho) = \\sum_{s=0}^{(l-|m|)/2} \\frac{(-1)^s(l-s)!}{ s!\\left( \\cfrac{l+|m|}{2} - s\\right)! \\left( \\cfrac{l-|m|}{2} + s\\right)!  }\\hspace{0.1cm} \\rho^{l-2s} \n",
+    "    \\mathcal{R}_l^{|m|} (\\rho) = \\sum_{s=0}^{(l-|m|)/2} \\frac{(-1)^s(l-s)!}{ s!\\left( \\frac{l+|m|}{2} - s\\right)! \\left( \\frac{l-|m|}{2} + s\\right)!  } \\rho^{l-2s} \n",
     "\\end{equation}\n",
     "\n",
     "Because the coefficient of rho is made up of entirely integer operations, it can be evaluated quickly and exactly to arbitrary orders (recall that python natively supports arbitrary length integer arithmetic). These coefficients can then be evaluated using Horner's method. This is done in the `zernike_radial_poly` function.\n",
     "\n",
     "The other approach uses the fact that the above equation can be written as\n",
     "\n",
-    "\\begin{equation}\n",
-    "    \\mathcal{R}_l^{m} (\\rho) = (-1)^{(l-m)/2} \\rho^m  P_{(l-m)/2}^{m, 0} (1 - 2 \\rho^2)  \\hspace{1cm} \\text{for } m\\geq0\n",
-    "\\end{equation}\n",
+    "$$\n",
+    "    \\mathcal{R}_l^{m} (\\rho) = (-1)^{(l-m)/2} \\rho^m  P_{(l-m)/2}^{m, 0} (1 - 2 \\rho^2)  \\hspace{1cm}\\text{for } m\\geq0 \n",
+    "$$\n",
     "where $P_{n}^{\\alpha, \\beta}(\\rho)$ is a Jacobi polynomial. This allows us to use stable recurrence relations for the Jacobi polynomials, as is done in the `zernike_radial` function."
    ]
   },
