fix syntax for equations

--- a/docs/notebooks/basis_grid.ipynb
+++ b/docs/notebooks/basis_grid.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "### Power Series\n",
     "\n",
-    "Profiles such as pressure $p$ and rotational transform $\\iota$ are specified in terms of power series in $\\rho$ where $\\rho = \\sqrt{\\frac{\\psi}{\\psi_{LCFS}}}$  is the square root of the normalized toroidal flux:\n",
+    "Profiles such as pressure $p$ and rotational transform $\\iota$ are specified in terms of power series in $\\rho$ where $\\rho = \\sqrt{\\cfrac{\\psi}{\\psi_{LCFS}}}$  is the square root of the normalized toroidal flux:\n",
     "\n",
     "$$f(\\rho) = \\sum_{l=0}^L a_l \\rho^l$$\n",
     "\n",
