chnage back to absolute values

--- a/docs/notebooks/basis_grid.ipynb
+++ b/docs/notebooks/basis_grid.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "$$\n",
     "   \\mathcal{F}_{n}(\\zeta) = \\begin{cases}\n",
-    "   \\cos(nN_{FP}\\zeta) &\\text{for }n\\ge0 \\\\[.2cm]\n",
+    "   \\cos(|n|N_{FP}\\zeta) &\\text{for }n\\ge0 \\\\[.2cm]\n",
     "   \\sin(|n|N_{FP}\\zeta) &\\text{for }n<0. \\\\\n",
     "   \\end{cases}\n",
     "$$\n",
@@ -194,9 +194,9 @@
     "\n",
     "$$\n",
     "   \\mathcal{G}^{m}_{n}(\\theta,\\zeta) = \\begin{cases}\n",
-    "   \\cos(m\\theta)\\cos(nN_{FP}\\zeta) &\\text{for }m\\ge0, n\\ge0 \\\\[.2cm]\n",
-    "   \\cos(m\\theta)\\sin(|n|N_{FP}\\zeta) &\\text{for }m\\ge0, n<0 \\\\[.2cm]\n",
-    "   \\sin(|m|\\theta)\\cos(nN_{FP}\\zeta) &\\text{for }m<0, n\\ge0 \\\\[.2cm]\n",
+    "   \\cos(|m|\\theta)\\cos(|n|N_{FP}\\zeta) &\\text{for }m\\ge0, n\\ge0 \\\\[.2cm]\n",
+    "   \\cos(|m|\\theta)\\sin(|n|N_{FP}\\zeta) &\\text{for }m\\ge0, n<0 \\\\[.2cm]\n",
+    "   \\sin(|m|\\theta)\\cos(|n|N_{FP}\\zeta) &\\text{for }m<0, n\\ge0 \\\\[.2cm]\n",
     "   \\sin(|m|\\theta)\\sin(|n|N_{FP}\\zeta) &\\text{for }m<0, n<0.\n",
     "   \\end{cases}\n",
     "$$\n",
@@ -260,7 +260,7 @@
     "The Zernike polynomials are given by:\n",
     "$$\n",
     "   \\mathcal{Z}^{m}_{l}(\\rho,\\theta) = \\begin{cases}\n",
-    "   \\mathcal{R}^{m}_l (\\rho) \\cos(m\\theta) &\\text{for }m\\ge0 \\\\[.2cm]\n",
+    "   \\mathcal{R}^{|m|}_l (\\rho) \\cos(|m|\\theta) &\\text{for }m\\ge0 \\\\[.2cm]\n",
     "   \\mathcal{R}^{|m|}_l (\\rho) \\sin(|m|\\theta) &\\text{for }m\\lt0 \\\\\n",
     "   \\end{cases}\n",
     "$$\n",
@@ -268,16 +268,16 @@
     "where the radial part can be written as:\n",
     "\n",
     "$$\n",
-    "    \\mathcal{R}_l^{m} (\\rho) = \\sum_{s=0}^{(l-m)/2} \\frac{(-1)^s(l-s)!}{ s!\\left( \\cfrac{l+m}{2} - s\\right)! \\left( \\cfrac{l-m}{2} + s\\right)!  }\\hspace{0.1cm} \\rho^{l-2s} \\hspace{1cm} \\text{for } m\\geq0 \n",
+    "    \\mathcal{R}_l^{|m|} (\\rho) = \\sum_{s=0}^{(l-|m|)/2} \\frac{(-1)^s(l-s)!}{ s!\\left( \\cfrac{l+|m|}{2} - s\\right)! \\left( \\cfrac{l-|m|}{2} + s\\right)!  }\\hspace{0.1cm} \\rho^{l-2s} \\hspace{1cm} \\text{for } m\\geq0 \n",
     "$$\n",
     "\n",
     "The Fourier-Zernike basis functions are then,\n",
     "\n",
     "$$\n",
     "    \\mathcal{Z}_l^m (\\rho,\\theta) \\mathcal{F}^n(\\zeta) = \\begin{cases}\n",
-    "        \\mathcal{R}_l^{m}(\\rho) \\hspace{0.1cm}  cos(m\\theta) \\hspace{0.1cm}  cos(nN_{FP}\\zeta)  \\hspace{1cm}& \\text{for } m\\geq0 \\text{ and } n\\geq0\\\\[.1cm]\n",
-    "        \\mathcal{R}_l^{m}(\\rho) \\hspace{0.1cm}  cos(m\\theta) \\hspace{0.1cm} sin(|n|N_{FP}\\zeta)  \\hspace{1cm}& \\text{for } m\\geq0 \\text{ and } n<0\\\\[.1cm]\n",
-    "        \\mathcal{R}_l^{|m|}(\\rho) \\hspace{0.1cm}  sin(|m|\\theta) \\hspace{0.1cm} cos(nN_{FP}\\zeta)  \\hspace{1cm}& \\text{for } m<0 \\text{ and } n\\geq0\\\\[.1cm]\n",
+    "        \\mathcal{R}_l^{|m|}(\\rho) \\hspace{0.1cm}  cos(|m|\\theta) \\hspace{0.1cm} cos(|n|N_{FP}\\zeta)  \\hspace{1cm}& \\text{for } m\\geq0 \\text{ and } n\\geq0\\\\[.1cm]\n",
+    "        \\mathcal{R}_l^{|m|}(\\rho) \\hspace{0.1cm}  cos(|m|\\theta) \\hspace{0.1cm} sin(|n|N_{FP}\\zeta)  \\hspace{1cm}& \\text{for } m\\geq0 \\text{ and } n<0\\\\[.1cm]\n",
+    "        \\mathcal{R}_l^{|m|}(\\rho) \\hspace{0.1cm}  sin(|m|\\theta) \\hspace{0.1cm} cos(|n|N_{FP}\\zeta)  \\hspace{1cm}& \\text{for } m<0 \\text{ and } n\\geq0\\\\[.1cm]\n",
     "        \\mathcal{R}_l^{|m|}(\\rho) \\hspace{0.1cm}  sin(|m|\\theta) \\hspace{0.1cm} sin(|n|N_{FP}\\zeta)  \\hspace{1cm}& \\text{for } m<0 \\text{ and } n<0\\\\[.1cm]\n",
     "    \\end{cases}\n",
     "$$\n",
