Update get_* calls in notebooks

--- a/docs/notebooks/DESC_Fixed_Axis_NAE_Constraint.ipynb
+++ b/docs/notebooks/DESC_Fixed_Axis_NAE_Constraint.ipynb
@@ -220,7 +220,7 @@
    ],
    "source": [
     "# get the fixed-boundary constraints, which include also fixing the pressure and fixing the current profile (iota=False flag means fix current)\n",
-    "constraints = get_fixed_boundary_constraints(eq=desc_eq, iota=False)\n",
+    "constraints = get_fixed_boundary_constraints(eq=desc_eq)\n",
     "print(constraints)\n",
     "\n",
     "# solve the equilibrium\n",
@@ -554,7 +554,7 @@
     "\n",
     "eq_NAE = eq_fit.copy()\n",
     "# this has all the constraints we need, iota=False specifies we want to fix current instead of iota\n",
-    "constraints = get_NAE_constraints(eq_NAE, qsc_eq, iota=False, order=1)\n",
+    "constraints = get_NAE_constraints(eq_NAE, qsc_eq, order=1)\n",
     "\n",
     "eq_NAE.solve(\n",
     "    verbose=3,\n",
