--- a/docs/notebooks/Toroidal_current_constraint.ipynb
+++ b/docs/notebooks/Toroidal_current_constraint.ipynb
@@ -203,7 +203,7 @@
    },
    "outputs": [],
    "source": [
-    "constraints = get_fixed_boundary_constraints(eq=eq, profiles=True, iota=False)"
+    "constraints = get_fixed_boundary_constraints(eq=eq, profiles=True)"
    ]
   },
   {
@@ -522,7 +522,7 @@
    "outputs": [],
    "source": [
     "objective = ObjectiveFunction(ForceBalance(eq=eq))\n",
-    "constraints = get_fixed_boundary_constraints(eq=eq, profiles=True, iota=False)"
+    "constraints = get_fixed_boundary_constraints(eq=eq, profiles=True)"
    ]
   },
   {
