fix compute quantity name in notebook

--- a/docs/notebooks/DESC_Fixed_Axis_NAE_Constraint.ipynb
+++ b/docs/notebooks/DESC_Fixed_Axis_NAE_Constraint.ipynb
@@ -779,11 +779,11 @@
     "    M=desc_eq.M_grid, N=desc_eq.N_grid, NFP=desc_eq.NFP, rho=np.array(1e-6)\n",
     ")\n",
     "# Evaluate B modes near the axis\n",
-    "data_surf = desc_eq.compute([\"|B|_mn\", \"B modes\"], grid=grid)\n",
-    "data_nae = eq_NAE.compute([\"|B|_mn\", \"B modes\"], grid=grid)\n",
+    "data_surf = desc_eq.compute([\"|B|_mn_B\", \"B modes\"], grid=grid)\n",
+    "data_nae = eq_NAE.compute([\"|B|_mn_B\", \"B modes\"], grid=grid)\n",
     "modes = data_surf[\"B modes\"]\n",
-    "B_mn_surf = data_surf[\"|B|_mn\"]\n",
-    "B_mn_nae = data_nae[\"|B|_mn\"]\n",
+    "B_mn_surf = data_surf[\"|B|_mn_B\"]\n",
+    "B_mn_nae = data_nae[\"|B|_mn_B\"]\n",
     "# Evaluate B on an angular grid\n",
     "theta = np.linspace(0, 2 * np.pi, 150)\n",
     "phi = np.linspace(0, 2 * np.pi, 100)\n",
@@ -939,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
