revised omnigenity tutorial

--- a/docs/notebooks/tutorials/04_Omnigenity_Optimization.ipynb
+++ b/docs/notebooks/tutorials/04_Omnigenity_Optimization.ipynb
@@ -300,12 +300,18 @@
     "- `B_lm` specifies the shape of the \"magnetic well\" on each flux surface. \n",
     "- `x_lmn` specifies how the well shape varies along different field lines. \n",
     "\n",
-    "We need to specify the resolution of the parameter space and the helicity of the field. \n",
     "The helicity is given by the tuple of integers $(M, N)$, and is set to $(0, N_{FP})$ for omnigenity with poloidal contours in this example. \n",
     "The typical case for helical contours would be $(1, N_{FP})$, and for toroidal contours would be $(1, 0)$. \n",
     "\n",
+    "We need to specify the resolution of the parameter space, given by the following integers: \n",
+    "- `L_well` is the maximum power of $\\rho$ used in the Chebyshev polynomial expansion for `B_lm`. \n",
+    "- `M_well` is the number of spline knots used on each surface for `B_lm`. \n",
+    "- `L_omni` is the maximum power of $\\rho$ used in the Chebyshev polynomial expansion for `x_lmn`. \n",
+    "- `M_omni` is the maximum mode number used in the cosine series expansion in $\\eta$ for `x_lmn`. \n",
+    "- `N_omni` is the maximum mode number used in the Fourier series expansion in $\\alpha$ for `x_lmn`. Quasi-symmetry corresponds to `N_omni=0`. \n",
+    "\n",
     "We provide initial values for the well shape parameters `B_lm` so that we can set the mirror ratio. \n",
-    "The total number of parameters is `B_lm.size = M_well * (L_well + 1)`. \n",
+    "The total number of parameters is `B_lm.size=M_well*(L_well+1)`. \n",
     "In this example, the well shape on each surface is represented by three spline knots, and there is $\\mathcal{O}(\\rho)$ variation across the flux surfaces. \n",
     "Here we set only the constant terms of the Chebyshev polynomials such that the initial target field has the same magnetic well from $B_{\\mathrm{min}}=0.8\\mathrm{~T}$ to $B_{\\mathrm{max}}=1.2\\mathrm{~T}$ on each surface. \n",
     "\n",
@@ -325,11 +331,14 @@
     "    L_well=1,  # radial resolution of B_lm parameters\n",
     "    M_well=3,  # number of spline knots on each flux surface\n",
     "    L_omni=1,  # radial resolution of x_lmn parameters\n",
-    "    M_omni=1,  # poloidal resolution of x_lmn parameters\n",
-    "    N_omni=1,  # toroidal resolution of x_lmn parameters\n",
+    "    M_omni=1,  # eta resolution of x_lmn parameters\n",
+    "    N_omni=1,  # alpha resolution of x_lmn parameters\n",
     "    NFP=eq.NFP,  # number of field periods; should always be equal to Equilibrium.NFP\n",
     "    helicity=(0, eq.NFP),  # helicity for poloidally closed |B| contours\n",
-    "    B_lm=np.array([0.8, 1.0, 1.2, 0, 0, 0]),  # magnetic well shape parameters\n",
+    "    B_lm=np.array(  # magnetic well shape parameters\n",
+    "        [[0.8, 1.0, 1.2],  # the first M_well coefficients are the L_well=0 spline knots\n",
+    "         [0, 0, 0]]  # the next M_well coefficients are the L_well=1 spline knots, etc.\n",
+    "    ).flatten(),\n",
     ")"
    ]
   },
@@ -669,7 +678,7 @@
     "Let us again plot the $|B|$ contours in Boozer coordinates to get a qualitative picture of the solution. \n",
     "Although still not perfect, the optimized equilibrium is clearly more omnigenous compared to the initial one we plotted above. \n",
     "Now almost all of the contours are closed poloidally, except for a few \"puddles\" near the minimum of the field strength. \n",
-    "The omnigenity could probably be further improved by using higher resolutions. "
+    "The omnigenity could probably be further improved by using higher resolutions and running for more iterations. "
    ]
   },
   {
@@ -712,7 +721,7 @@
    "metadata": {},
    "source": [
     "We can also plot the omnigenous field that was used as a target during the optimization, as shown below. \n",
-    "This is a perfectly omnigenous magnetic field and is physically unrealistic to achieve by an equilibrium, but it represents the closest omnigenous field to the optimized solution. \n",
+    "This is a perfectly omnigenous magnetic field and is physically unrealistic to achieve by an equilibrium, but it represents the \"closest\" omnigenous field to the optimized solution. \n",
     "In the limit of lower omnigenity errors, this plot and the one from the equilibrium plotted above should approach becoming identical. \n",
     "\n",
     "Plotting the omnigenous field in Boozer coordinates requires a value for the rotational transform, so we use $\\iota$ from the optimized equilibrium. "
@@ -816,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
