update reference in QS tutorial

--- a/docs/notebooks/tutorials/03_Quasi-Symmetry_Optimization.ipynb
+++ b/docs/notebooks/tutorials/03_Quasi-Symmetry_Optimization.ipynb
@@ -22,7 +22,7 @@
    },
    "source": [
     "from desc import set_device\n",
-    "set_device(\"gpu\")This tutorial demonstrates how to perform optimization with DESC. It will go through two examples: 1) targeting the \"triple product\" quasi-symmetry objective $f_T$ in the full plasma volume 2) targeting the \"two-term\" objective $f_C$ for quasi-helical symmetry at the plasma boundary surface. These examples are adapted from a problem first presented in [Rodriguez et al. (2022)](https://www.cambridge.org/core/journals/journal-of-plasma-physics/article/measures-of-quasisymmetry-for-stellarators/01B9DFE86A23964F331E0E0615B4E7A2) and reproduced in [Dudt et al. (2022)](https://arxiv.org/abs/2204.00078)."
+    "set_device(\"gpu\")This tutorial demonstrates how to perform optimization with DESC. It will go through two examples: 1) targeting the \"triple product\" quasi-symmetry objective $f_T$ in the full plasma volume 2) targeting the \"two-term\" objective $f_C$ for quasi-helical symmetry at the plasma boundary surface. These examples are adapted from a problem first presented in [Rodriguez et al. (2022)](https://www.cambridge.org/core/journals/journal-of-plasma-physics/article/measures-of-quasisymmetry-for-stellarators/01B9DFE86A23964F331E0E0615B4E7A2) and reproduced in [Dudt et al. (2023)](https://www.cambridge.org/core/journals/journal-of-plasma-physics/article/desc-stellarator-code-suite-part-3-quasisymmetry-optimization/0B262B685969D2F5697BEE28C8A78DB1)."
    ]
   },
   {
