rename omni linear objectives

--- a/docs/notebooks/tutorials/04_Omnigenity_Optimization.ipynb
+++ b/docs/notebooks/tutorials/04_Omnigenity_Optimization.ipynb
@@ -107,14 +107,14 @@
     "    AspectRatio,\n",
     "    CurrentDensity,\n",
     "    FixCurrent,\n",
-    "    FixOmni,\n",
+    "    FixOmniBmax,\n",
+    "    FixOmniShift,\n",
+    "    FixOmniWell,\n",
     "    FixPressure,\n",
     "    FixPsi,\n",
-    "    FixWell,\n",
     "    GenericObjective,\n",
     "    ObjectiveFunction,\n",
     "    Omnigenity,\n",
-    "    StraightBmaxContour,\n",
     "    get_fixed_boundary_constraints,\n",
     ")\n",
     "from desc.optimize import Optimizer\n",
@@ -464,11 +464,11 @@
     "The `CurrentDensity`, `FixPressure`, `FixCurrent`, and `FixPsi` objectives ensure that we maintain a good vacuum equilibrium during the optimization. \n",
     "\n",
     "We also include three additional constraints that are unique to the omnigenity optimization: \n",
-    "- A perfect omnigenous magnetic field must have a straight $B_{\\mathrm{max}}$ contour in Boozer coordinates, and this is accomplished with the `StraightBmaxContour` objective. \n",
-    "- The `FixOmni` objective is used to fix values of the `field.x_lmn` parameters. \n",
+    "- A perfect omnigenous magnetic field must have a straight $B_{\\mathrm{max}}$ contour in Boozer coordinates, and this is accomplished with the `FixOmniBmax` objective. \n",
+    "- The `FixOmniShift` objective is used to fix values of the `field.x_lmn` parameters. \n",
     "In this OP example our $B_{\\mathrm{max}}$ contour is located at $\\zeta_B=0$, and this constraint is used to ensure that the $B_{\\mathrm{min}}$ contour is located at $\\zeta_B=\\pi/N_{FP}$ on average. \n",
     "This constraint should always be true for stellarator symmetry. \n",
-    "- The `FixWell` objective is used to fix values of the `field.B_lm` parameters. \n",
+    "- The `FixOmniWell` objective is used to fix values of the `field.B_lm` parameters. \n",
     "Here we use it to fix the values of $B_{\\mathrm{min}}$ and $B_{\\mathrm{max}}$ on axis to contrain the mirror ratio. \n",
     "The shape of the magnetic well will still have one degree of freedom on the magnetic axis, and the mirror ratio is unconstrained on other flux surfaces. "
    ]
@@ -488,11 +488,11 @@
     "    FixCurrent(eq=eq),  # fix vacuum current profile\n",
     "    FixPsi(eq=eq),  # fix total toroidal magnetic flux\n",
     "    # ensure the B_max contour is straight in Boozer coordinates\n",
-    "    StraightBmaxContour(field=field),\n",
+    "    FixOmniBmax(field=field),\n",
     "    # ensure the average B_min contour is at zeta_B=pi/NFP\n",
-    "    FixOmni(field=field, indices=np.where(field.omni_basis.modes[:, 1] == 0)[0]),\n",
+    "    FixOmniShift(field=field, indices=np.where(field.omni_basis.modes[:, 1] == 0)[0]),\n",
     "    # fix the mirror ratio on the magnetic axis\n",
-    "    FixWell(field=field, indices=[0, field.M_well - 1]),\n",
+    "    FixOmniWell(field=field, indices=[0, field.M_well - 1]),\n",
     ")"
    ]
   },
@@ -890,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
