--- a/docs/notebooks/tutorials/04_Omnigenity_Optimization.ipynb
+++ b/docs/notebooks/tutorials/04_Omnigenity_Optimization.ipynb
@@ -310,9 +310,9 @@
     "We need to specify the resolution of the parameter space, given by the following integers: \n",
     "- `L_well` is the maximum power of $\\rho$ used in the Chebyshev polynomial expansion for `B_lm`. \n",
     "- `M_well` is the number of spline knots used on each surface for `B_lm`. \n",
-    "- `L_omni` is the maximum power of $\\rho$ used in the Chebyshev polynomial expansion for `x_lmn`. \n",
-    "- `M_omni` is the maximum mode number used in the cosine series expansion in $\\eta$ for `x_lmn`. \n",
-    "- `N_omni` is the maximum mode number used in the Fourier series expansion in $\\alpha$ for `x_lmn`. Quasi-symmetry corresponds to `N_omni=0`. \n",
+    "- `L_shift` is the maximum power of $\\rho$ used in the Chebyshev polynomial expansion for `x_lmn`. \n",
+    "- `M_shift` is the maximum mode number used in the cosine series expansion in $\\eta$ for `x_lmn`. \n",
+    "- `N_shift` is the maximum mode number used in the Fourier series expansion in $\\alpha$ for `x_lmn`. Quasi-symmetry corresponds to `N_shift=0`. \n",
     "\n",
     "We provide initial values for the well shape parameters `B_lm` so that we can set the mirror ratio. \n",
     "The total number of parameters is `B_lm.size=M_well*(L_well+1)`. \n",
@@ -334,9 +334,9 @@
     "field = OmnigenousField(\n",
     "    L_well=1,  # radial resolution of B_lm parameters\n",
     "    M_well=3,  # number of spline knots on each flux surface\n",
-    "    L_omni=1,  # radial resolution of x_lmn parameters\n",
-    "    M_omni=1,  # eta resolution of x_lmn parameters\n",
-    "    N_omni=1,  # alpha resolution of x_lmn parameters\n",
+    "    L_shift=1,  # radial resolution of x_lmn parameters\n",
+    "    M_shift=1,  # eta resolution of x_lmn parameters\n",
+    "    N_shift=1,  # alpha resolution of x_lmn parameters\n",
     "    NFP=eq.NFP,  # number of field periods; should always be equal to Equilibrium.NFP\n",
     "    helicity=(0, eq.NFP),  # helicity for poloidally closed |B| contours\n",
     "    B_lm=np.array(  # magnetic well shape parameters\n",
