Remove old precise QA tutorial

--- a/docs/notebooks/tutorials/advanced_optimization.ipynb
+++ b/docs/notebooks/tutorials/advanced_optimization.ipynb
@@ -1127,6 +1127,14 @@
     "    [eq0, eqa, eqfam[-1]], labels=[\"Initial\", \"Augmented Lagrangian\", \"Proximal\"]\n",
     ");"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb07c71e-a8d7-4766-8d7e-94e953043170",
+   "metadata": {},
+   "source": [
+    "Further example scripts for precise QS optimization can be found in the `desc/examples` folder"
+   ]
   }
  ],
  "metadata": {
