--- a/docs/notebooks/tutorials/bootstrap_current.ipynb
+++ b/docs/notebooks/tutorials/bootstrap_current.ipynb
@@ -118,13 +118,14 @@
    "metadata": {},
    "source": [
     "Calculating the bootstrap current requires knowledge of the temperature and density profiles for each species in the plasma. \n",
-    "We replace the vacuum pressure profile with the following kinetic profiles: \n",
+    "We replace the vacuum pressure profile with the following kinetic profiles corresponding to $\\langle\\beta\\rangle=2.5\\%$: \n",
     "\n",
-    "$T_e = T_i = 2.38\\times10^{20} (1 - \\rho^{10}) ~\\text{m}^{-3}$\n",
+    "$n_e = n_i = 2.38\\times10^{20} (1 - \\rho^{10}) ~\\text{m}^{-3}$\n",
     "\n",
-    "$n_e = n_i = 9.45\\times10^{3} (1 - \\rho^{2}) ~\\text{Pa}$\n",
+    "$T_e = T_i = 9.45\\times10^{3} (1 - \\rho^{2}) ~\\text{eV}$\n",
     "\n",
-    "This equilibrium will have $\\langle\\beta\\rangle=2.5\\%$. "
+    "The temperature profiles must be given for both ions and electrons, but only the electron density profile is specified. \n",
+    "The ion density profile is given by the effective atomic number $Z_{eff}$ as $n_i = n_e / Z_{eff}$. "
    ]
   },
   {
@@ -134,13 +135,11 @@
    "outputs": [],
    "source": [
     "eq0.pressure = None\n",
-    "eq0.atomic_number = PowerSeriesProfile(np.array([1]), sym=True)\n",
-    "eq0.electron_density = (\n",
-    "    PowerSeriesProfile(np.array([1.0, 0.0, 0.0, 0.0, 0.0, -1.0]), sym=True) * 2.38e20\n",
-    ")\n",
-    "eq0.electron_temperature = PowerSeriesProfile(np.array([1.0, -1.0]), sym=True) * 9.45e3\n",
-    "eq0.ion_temperature = PowerSeriesProfile(np.array([1.0, -1.0]), sym=True) * 9.45e3\n",
-    "eq0.current = PowerSeriesProfile(np.zeros((eq0.L + 1,)), sym=False)"
+    "eq0.atomic_number = PowerSeriesProfile([1])\n",
+    "eq0.electron_density = PowerSeriesProfile(params=[1, -1], modes=[0, 10]) * 2.38e20\n",
+    "eq0.electron_temperature = PowerSeriesProfile(params=[1, -1], modes=[0, 2]) * 9.45e3\n",
+    "eq0.ion_temperature = PowerSeriesProfile(params=[1, -1], modes=[0, 2]) * 9.45e3\n",
+    "# the default current profile is the vacuum case eq0.current = PowerSeriesProfile([0])"
    ]
   },
   {
@@ -318,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our current profile is represented as a power series of the form \n",
+    "Our current profile will be represented as a power series of the form: \n",
     "\n",
     "$I = c_0 + c_1 \\rho + c_2 \\rho^2 + \\mathcal{O}(\\rho^3)$\n",
     "\n",
@@ -327,8 +326,18 @@
     "However, the Redl bootstrap current formula scales as $\\mathcal{O}(\\sqrt{\\rho})$ near the magnetic axis. \n",
     "This is incorrect, because the drift-kinetic equation from the Redl formula does not account for finite orbit width effects that become important near the axis. \n",
     "\n",
-    "It is recommended to enforce $c_0 = c_1 = 0$. \n",
-    "This prevents getting good self-consistency near the magnetic axis, but results in better quality equilibria overall. \n"
+    "Typically, we use even power series with `sym=True` for all equilibrium profiles to give the desired analycity conditions. \n",
+    "For bootstrap current optimizations, it is recommended to use the full power series with `sym=False` while also enforcing $c_0 = c_1 = 0$. \n",
+    "This prevents getting good self-consistency near the magnetic axis, but allows for good agreement throughout the rest of the plasma volume and results in high quality equilibria overall. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eq0.current = PowerSeriesProfile(np.zeros((eq0.L + 1,)), sym=False)"
    ]
   },
   {
@@ -898,21 +907,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "\nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatched elements: 8 / 8 (100%)\nMax absolute difference: 55973.18258318\nMax relative difference: 0.03949728\n x: array([1069689.830626, 1440640.41587 , 1671795.899221, 1854315.360618,\n       2055915.322488, 2238680.617439, 2188223.286859, 1473113.274329])\n y: array([1055083.334572, 1432891.169358, 1669408.094384, 1844647.563394,\n       2037172.25328 , 2221356.564101, 2175306.292841, 1417140.091745])",
+     "ename": "",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/dudt/DESC/docs/notebooks/tutorials/bootstrap_current.ipynb Cell 35\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/dudt/DESC/docs/notebooks/tutorials/bootstrap_current.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m np\u001b[39m.\u001b[39mtesting\u001b[39m.\u001b[39massert_allclose(\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/dudt/DESC/docs/notebooks/tutorials/bootstrap_current.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     grid\u001b[39m.\u001b[39mcompress(data1[\u001b[39m\"\u001b[39m\u001b[39m<J*B>\u001b[39m\u001b[39m\"\u001b[39m]), grid\u001b[39m.\u001b[39mcompress(data1[\u001b[39m\"\u001b[39m\u001b[39m<J*B> Redl\u001b[39m\u001b[39m\"\u001b[39m]), rtol\u001b[39m=\u001b[39m\u001b[39m3e-2\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/dudt/DESC/docs/notebooks/tutorials/bootstrap_current.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m )\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/dudt/DESC/docs/notebooks/tutorials/bootstrap_current.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m np\u001b[39m.\u001b[39mtesting\u001b[39m.\u001b[39massert_allclose(\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/dudt/DESC/docs/notebooks/tutorials/bootstrap_current.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     grid\u001b[39m.\u001b[39mcompress(data2[\u001b[39m\"\u001b[39m\u001b[39m<J*B>\u001b[39m\u001b[39m\"\u001b[39m]), grid\u001b[39m.\u001b[39mcompress(data2[\u001b[39m\"\u001b[39m\u001b[39m<J*B> Redl\u001b[39m\u001b[39m\"\u001b[39m]), rtol\u001b[39m=\u001b[39m\u001b[39m2e-2\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/dudt/DESC/docs/notebooks/tutorials/bootstrap_current.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m )\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/dudt/DESC/docs/notebooks/tutorials/bootstrap_current.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m np\u001b[39m.\u001b[39;49mtesting\u001b[39m.\u001b[39;49massert_allclose(grid\u001b[39m.\u001b[39;49mcompress(data1[\u001b[39m\"\u001b[39;49m\u001b[39m<J*B>\u001b[39;49m\u001b[39m\"\u001b[39;49m]), grid\u001b[39m.\u001b[39;49mcompress(data2[\u001b[39m\"\u001b[39;49m\u001b[39m<J*B>\u001b[39;49m\u001b[39m\"\u001b[39;49m]))\n",
-      "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
-      "File \u001b[0;32m~/anaconda3/envs/desc/lib/python3.10/contextlib.py:79\u001b[0m, in \u001b[0;36mContextDecorator.__call__.<locals>.inner\u001b[0;34m(*args, **kwds)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[39m@wraps\u001b[39m(func)\n\u001b[1;32m     77\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39minner\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds):\n\u001b[1;32m     78\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_recreate_cm():\n\u001b[0;32m---> 79\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/testing/_private/utils.py:862\u001b[0m, in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision, equal_nan, equal_inf, strict)\u001b[0m\n\u001b[1;32m    858\u001b[0m         err_msg \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(remarks)\n\u001b[1;32m    859\u001b[0m         msg \u001b[39m=\u001b[39m build_err_msg([ox, oy], err_msg,\n\u001b[1;32m    860\u001b[0m                             verbose\u001b[39m=\u001b[39mverbose, header\u001b[39m=\u001b[39mheader,\n\u001b[1;32m    861\u001b[0m                             names\u001b[39m=\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mx\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39my\u001b[39m\u001b[39m'\u001b[39m), precision\u001b[39m=\u001b[39mprecision)\n\u001b[0;32m--> 862\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(msg)\n\u001b[1;32m    863\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m:\n\u001b[1;32m    864\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mtraceback\u001b[39;00m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: \nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatched elements: 8 / 8 (100%)\nMax absolute difference: 55973.18258318\nMax relative difference: 0.03949728\n x: array([1069689.830626, 1440640.41587 , 1671795.899221, 1854315.360618,\n       2055915.322488, 2238680.617439, 2188223.286859, 1473113.274329])\n y: array([1055083.334572, 1432891.169358, 1669408.094384, 1844647.563394,\n       2037172.25328 , 2221356.564101, 2175306.292841, 1417140.091745])"
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -950,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
